@@ -28,15 +28,15 @@ MAKEOPTS="-j3"
 
 # USE flags (aggregative)
 
-USE="aac acpi alsa aspell bidi bluetooth bs2b cairo caps cdda cjk consolekit
-     cue dbus dhcp djvu dynamic eap-tls exif expat fbcondecor flac
-     fontconfig gmp grammar gconf glib groupwise gtk hires-icons hybrid-auth
-     id3tag idn iproute2 irda jbig jpeg jpeg2k lcms libnotify lzma mad
-     madwifi mktemp mmx mp3 multicall networkmanager ogg opengl ots pcmcia
-     pcsc-lite pkcs11 png policykit pth scsi silc smartcard smime sndfile
-     speex spell sse startup-notification staticsocket svg symlink thesaurus
-     thin-splines threads tiff tordns truetype unicode usb v4l2 vorbis
-     wavpack wimax wmf X X509 x86emu xattr xinerama xmp xv xvmc"
+USE="aac acpi alsa archive aspell bidi bluetooth bs2b cairo caps cdda cjk
+     consolekit cue dbus dhcp djvu dynamic eap-tls exif expat fbcondecor
+     flac fontconfig gmp grammar gconf glib groupwise gtk hires-icons
+     hybrid-auth id3tag idn iproute2 irda jbig jpeg jpeg2k lcms libnotify
+     lzma mad madwifi mktemp mmx mp3 multicall networkmanager ogg opengl ots
+     pcmcia pcsc-lite pkcs11 png policykit pth scsi silc smartcard smime
+     sndfile speex spell sse startup-notification staticsocket svg symlink
+     thesaurus thin-splines threads tiff tordns truetype unicode usb v4l2
+     vorbis wavpack wimax wmf X X509 x86emu xattr xinerama xmp xv xvmc"
 
 USE="${USE} -ant -berkdb -cddb -cracklib -cramfs -cups -cxx -dirac -encode
      -fts3 -gdbm -git -gtk3 -http-cache -hunspell -live -lvm1 -mng -mudflap
