@@ -9,10 +9,10 @@ net-dialup/ppp                  -gtk
 gnome-extra/libgsf              -gtk
 dev-lang/python                 -ncurses -readline
 net-im/pidgin                   -ncurses
+dev-lang/lua                    -readline
 dev-libs/libxml2                -readline
 sci-visualization/gnuplot       -readline
 dev-db/sqlite                   -readline
-media-video/mplayer             -opengl
 media-libs/jasper               -opengl
 
 # Drivers
@@ -21,7 +21,6 @@ media-libs/jasper               -opengl
 # [also modified: rootfs.excludes#r[36]00_dri.*, setup#eselect mesa]
 x11-base/xorg-drivers           -video_cards_fbdev
 media-libs/mesa                 -video_cards_vmware shared-dricore -gallium -egl -llvm
-media-video/mplayer             -video_cards_*
 sys-fs/udev                     extras
 sys-fs/ntfsprogs                minimal -crypt
 
@@ -33,7 +32,6 @@ net-libs/libsoup                ssl
 net-libs/glib-networking        ssl
 net-misc/curl                   ssl   gnutls -nss
 net-libs/neon                   ssl   gnutls
-media-video/rtmpdump            ssl   gnutls
 net-wireless/wpa_supplicant     -ssl  gnutls
 net-misc/networkmanager               gnutls -nss
 net-misc/openvpn                ssl
@@ -44,14 +42,11 @@ dev-libs/cyrus-sasl             ssl          -crypt
 net-analyzer/netcat                          -crypt
 
 # Multimedia
-# mplayer: faac, x264, xvid, twolame/toolame and (partly) mp3 are activated only for +encode
-media-video/mplayer             cpudetection custom-cpuopts 3dnow 3dnowext mmxext sse2
-media-video/mplayer             mpg123 -mp3 libmpeg2 rtmp -rar
-media-video/mplayer             -x264 -faac -xvid -twolame -toolame
+media-video/totem               -youtube nsplugin
 media-sound/sox                 encode
 media-plugins/audacious-plugins lame libsamplerate mms
 media-video/gpac                -* aac mad vorbis
-media-plugins/gst-plugins-meta  dv lame theora vpx -flac -wavpack
+media-plugins/gst-plugins-meta  dv lame theora vpx  a52 dts dvd mms mpeg  ffmpeg
 media-libs/libtheora            encode
 net-im/pidgin                   -gstreamer
 dev-java/gnu-classpath          gstreamer
