@@ -1,117 +1,0 @@
-#!/bin/sh -e
-
-if [ $# = 0 ]  ||  ! echo "$1" | grep -q '\.mp4$'; then
-    echo "Format: $0 <outfile.mp4> [fps]"
-    exit 1
-fi
-
-
-# Variables
-result="$1"
-fps=${2:-7.5}
-audelay=1
-
-tmpdir=$(mktemp -d --tmpdir=$(dirname "${out}") mkclip.XXXXXX)
-fifodir=$(mktemp -d)
-
-
-# Set some traps
-trap 'if [ $? != 0 ]; then kill ${vstrpid} ${astrpid} ${vencpid} ${aencpid} 2>/dev/null || true; rm -rf ${fifodir}; fi' 0
-trap : INT QUIT TERM SEGV
-
-
-# Create FIFOs (need fs support, space not required)
-mkfifo ${fifodir}/video.y4m ${fifodir}/audio.pcm ${fifodir}/mplayer_ctl
-
-
-# Launch encoders, note PIDs for waiting
-x264 --quiet --no-progress --preset fast \
-     -o "${tmpdir}"/video.264 ${fifodir}/video.y4m & vencpid=$!
-
-lame -S --strictly-enforce-ISO --preset phon+ \
-    -r -s 16 --bitwidth 16 -m m 2>/dev/null \
-    ${fifodir}/audio.pcm "${tmpdir}"/audio.mp3 & aencpid=$!
-
-
-# Launch streams, note PIDs for killing
-# (mplayer sometimes dies with -really-quiet)
-mplayer -really-quiet -noconfig all -fps "${fps}" -slave \
-        -input nodefault-bindings:conf=/dev/null:file=${fifodir}/mplayer_ctl \
-        -vf harddup -tv fps="${fps}" tv://               \
-        -vo yuv4mpeg:file=${fifodir}/video.y4m & vstrpid=$!
-echo pausing get_property pause > ${fifodir}/mplayer_ctl
-
-arecord -D mono -qN -t raw -f S16_LE -r 16000 -c 1 - \
-        > ${fifodir}/audio.pcm & astrpid=$!
-kill -STOP ${astrpid}
-
-
-# Signal streamers to start on user input
-echo "Press [Enter] to start..."
-read dummy
-
-kill -CONT ${astrpid}
-sleep ${audelay}
-echo pause > ${fifodir}/mplayer_ctl
-
-
-# Kill streams on user input, then wait for encoders
-echo "Encoding, press [Enter] when done..."
-read dummy
-
-if ! kill -0 ${vstrpid} 2>/dev/null; then
-    vstrpid=err
-else
-    echo stop > ${fifodir}/mplayer_ctl
-fi
-
-if ! kill -INT ${astrpid} 2>/dev/null; then
-    astrpid=err
-fi
-
-if [ ${vstrpid} = err ]; then
-    echo "Video stream source died, killing video encoder"
-    kill ${vencpid} 2>/dev/null || true
-fi
-
-if [ ${astrpid} = err ]; then
-    echo "Audio stream source died, killing audio encoder"
-    kill ${aencpid} 2>/dev/null || true
-fi
-
-wait ${vencpid} || true
-wait ${aencpid} || true
-
-
-# Remove FIFOs
-rm    ${fifodir}/video.y4m ${fifodir}/audio.pcm ${fifodir}/mplayer_ctl
-rmdir ${fifodir}
-
-
-# If there was a streaming error, delete any 0-size files
-if [ ${vstrpid} = err  -o  ${astrpid} = err ]; then
-    if [ ! -s "${tmpdir}"/video.264 ]; then
-        rm -f "${tmpdir}"/video.264
-    fi
-
-    if [ ! -s "${tmpdir}"/audio.mp3 ]; then
-        rm -f "${tmpdir}"/audio.mp3
-    fi
-
-    rmdir --ignore-fail-on-non-empty "${tmpdir}"
-    exit 1
-fi
-
-
-# Copy encoded streams to MP4 container
-lang=$(echo ${LANG} | sed 's/[_.].*//')
-
-MP4Box -quiet -tmp "${tmpdir}"               \
-    -new "${result}" -no-iod                 \
-    -add "${tmpdir}"/video.264:fps="${fps}" \
-    -add "${tmpdir}"/audio.mp3:lang="${lang:-und}"
-
-
-# Remove encoded streams
-rm    "${tmpdir}"/video.264 "${tmpdir}"/audio.mp3
-rmdir "${tmpdir}"
