@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<gconf>
+	<entry name="active" mtime="1319813946" type="bool" value="true"/>
+</gconf>
