@@ -1,16 +1,0 @@
-
-[default]
-quiet=yes
-ass-use-margins=yes
-stop-xscreensaver=yes
-
-font="Sans"
-
-af-add=bs2b
-vf-add=screenshot
-zoom=yes
-
-tv=driver=v4l2
-
-[gnome-mplayer]
-msglevel=all=5
