@@ -1,0 +1,8 @@
+
+[State]
+window_w=362
+window_h=493
+show_sidebar=false
+maximised=false
+sidebar_w=0
+sidebar_page=properties
