@@ -286,8 +286,10 @@ awk '/UTF-8/ && !/^iw_IL/ { match($1, /^([a-z]+)_([A-Z]+)\y(.*@([^.]*))?/, a); p
 awk -F '\t' '!/^#/ { printf "%s %s \"%s\"\n", $1, $3, $4 }' /usr/share/zoneinfo/zone.tab | sed "${ccrep}" | LC_ALL=C sort | tr '\n' ' ' > /etc/timezone.menu
 
 
+# midori, totem, gst-plugin-scanner: ffmpeg, ffmpegscale, postproc GStreamer plugins
 sinfo "Selectively disabling PAX"
-paxctl -m /usr/bin/mplayer /usr/bin/mpg123 /usr/bin/jamvm
+paxctl -m /usr/bin/midori /usr/bin/totem* /usr/libexec/gstreamer*/gst-plugin-scanner \
+          /usr/bin/mpg123 /usr/bin/jamvm
 
 
 sinfo "Configuring fontconfig"
