@@ -26,10 +26,11 @@
   * Added cables communication identity information applet
 
   * Added small and fast Java runtime environment (JamVM)
-  * Added HTML5 video/audio support to Midori
+  * Added HTML5 and plugin-based video/audio support to Midori
   * Added SASL (plain) authentication and OTR encryption support to XChat
   * Added PPTP/OpenVPN/Cisco VPN support to NetworkManager
   * Added emelFM2 2-pane file manager
+  * Replaced MPlayer with Totem (GStreamer-based)
   * Replaced xvkbd with Florence virtual keyboard
 
   * Audio mixer channels are heuristically set up on boot
